# energy-market-analytics

./: .gitignore  CLAUDE.md  README.md  SETUP.md  pyproject.toml
.github/workflows/: update_data.yml
data/: cftc_cot.parquet  degree_days.parquet  eia_storage.parquet  futures.parquet
docs/: DATA_SOURCES.md  LEARNING_LOG.md  PRICE_DISCOVERY.md  README.md
notebooks/: 01_data_exploration.ipynb  debug_cftc.ipynb  debug_eia.ipynb  debug_futures.ipynb  debug_noaa.ipynb
pipeline/: fetch_cftc.py  fetch_eia.py  fetch_futures.py  fetch_noaa.py  fetch_weather.py
