[project]
name = "curve-lab"
version = "0.1.0"
description = "Natural gas spread analysis and modeling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=1.2",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "notebook>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
